# tbp-overlay-cider-bridge

./: .gitignore  .pre-commit-config.yaml  .prettierrc  LICENSE  README.md  SETUP.md  bun.lockb  config.sample.json  package.json  pyproject.toml
.github/workflows/: build.yml  release.yml
src/: config.ts  logger.ts  main.ts
src/parrot_cider/: main.py
src/parrot_cider/models/: __init__.py  api_playback.py  apple_music.py  base.py
src/types/: applemusic.ts  cider.ts  parrot.ts
